# hose-sound

./: Dockerfile  Pipfile  README.md  launch_server.sh  pyproject.toml  pytest.ini  run.py
config/: dev.env
docker/compose/: compose.yml
docker/containers/hose-db/: Dockerfile  entrypoint.sh
docker/containers/hose-server/: Dockerfile  entrypoint.sh
hose/: conftest.py  manage.py  pytest.ini
hose/front_hose/: README.md  index.html  package.json
hose/front_hose/config/: index.js
hose/front_hose/src/: main.js  shared.js
hose/front_hose/src/components/: HomePage.vue  (+6 more)
hose/front_hose/static/: banner.xcf  style.css
hose/hose/: settings.py  urls.py  views.py  wsgi.py
hose/hose/static/: style.css
hose/hose/templates/: base.html  footer.html  home.html  index.html  signup.html
hose/hose_usage/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
hose/hose_usage/migrations/: 0001_initial.py  0002_auto_20190113_2335.py  0003_auto_20190113_2336.py  0004_hoseassociation_time_last_update.py  0005_hosecontent_time_added.py  0006_associationdemand.py  0007_auto_20190119_1438.py  0008_auto_20190119_2301.py  0009_auto_20190122_2321.py  0010_auto_20190125_0123.py
hose/tests/: test_authentication.py  test_views.py
hose/tests/rest/: test_hose_user.py
hose_app/: app.py  config.py  models.py
hose_app/templates/: base_layout.jinja2  login.jinja2
hose_app/views/: hoses_view.py  login_view.py
hose_core/: base_operation.py  config.py  exceptions.py  hose_db.py  models.py
migrations/: 01.sql
tests/: test_base_op.py
(+28 files in other folders)
